Fix a few alignment issues in teh daily report

--- a/style.css
+++ b/style.css
@@ -388,6 +388,7 @@ h1 {
     color: #333;
     overflow-y: auto; /* Allow scrolling within report */
     flex-grow: 1;
+    text-align: left;
 }
 
 .report-header {
